--- a/SAC/config.yml
+++ b/SAC/config.yml
@@ -9,33 +9,33 @@ train:
 
 agent:
   gamma: 0.99 #0.99
-  tau: 0.1 #0.005
-  alpha: .9
+  tau: 0.005 #0.005
+  alpha: .5
   constant_alpha: False
-  alpha_decay: .99
+  alpha_decay: .999
 
   std_scale: True
-  std_decay: .80 # original: .99
+  std_decay: .99 # original: .99
   std_min: 0.01
   std: 1 # original: 1
   
   buffer:
-    size: 1000000
-    batch: 64 # origi: 128
+    size: 10000
+    batch: 512 # origi: 128
 
   actor:
-    h_layers: 3
-    h_size: 64
-    print_model: True
+    h_layers: 2
+    h_size: 128
+    print_model: False
 
   critic:
     h_state_layers: 0
     h_state_size: 8
     h_action_layers: 0
     h_action_size: 2
-    h_layers: 3
-    h_size: 64
-    print_model: True
+    h_layers: 2
+    h_size: 128
+    print_model: False
   
       
 
