--- a/stored_results/test20/config.yml
+++ b/stored_results/test20/config.yml
@@ -1,5 +1,5 @@
 setup:
-  seed: 3
+  seed: 10
   use_gpu: False
 
 train:
@@ -9,24 +9,24 @@ train:
 
 agent:
   gamma: 0.99 #0.99
-  tau: 1 #0.005
+  tau: 0.005 #0.005
 
-  alpha: 1
-  alpha_scale: True
+  alpha: .5
+  alpha_scale: False
   alpha_decay: .999
-  alpha_min: 0.1
+  alpha_min: .0001
 
   std_scale: True
-  std_decay: .996 # original: .99
-  std_min: 0.01
-  std: 0.5 # original: 1
+  std_decay: .993 # original: .99
+  std_min: 0.3
+  std: 1 # original: 1
   
   buffer:
     size: 10000
-    batch: 4096 # origi: 128
+    batch: 2048 # origi: 128
 
   actor:
-    h_layers: 4
+    h_layers: 2
     h_size: 64
     print_model: False
 
@@ -35,7 +35,7 @@ agent:
     h_state_size: 8
     h_action_layers: 0
     h_action_size: 2
-    h_layers: 4
+    h_layers: 2
     h_size: 64
     print_model: False
   
