--- a/config.yml
+++ b/config.yml
@@ -9,24 +9,24 @@ train:
 
 agent:
   gamma: 0.99 #0.99
-  tau: 1 #0.005
+  tau: 0.0005 #0.005
 
-  alpha: 1
-  alpha_scale: True
-  alpha_decay: .999
-  alpha_min: 0.1
+  alpha: .6
+  alpha_scale: False
+  alpha_decay: .994
+  alpha_min: 0.01
 
   std_scale: True
-  std_decay: .996 # original: .99
+  std_decay: .995 # original: .99
   std_min: 0.01
-  std: 0.5 # original: 1
+  std: 1 # original: 1
   
   buffer:
-    size: 10000
-    batch: 4096 # origi: 128
+    size: 100000
+    batch: 512 # origi: 128
 
   actor:
-    h_layers: 4
+    h_layers: 2
     h_size: 64
     print_model: False
 
@@ -34,8 +34,8 @@ agent:
     h_state_layers: 0
     h_state_size: 8
     h_action_layers: 0
-    h_action_size: 2
-    h_layers: 4
+    h_action_size: 8
+    h_layers: 2
     h_size: 64
     print_model: False
   
