--- a/stored_results/test2/config.yml
+++ b/stored_results/test2/config.yml
@@ -1,5 +1,5 @@
 setup:
-  seed: 3
+  seed: 9
   use_gpu: False
 
 train:
@@ -15,11 +15,13 @@ agent:
   alpha_scale: False
   alpha_decay: .994
   alpha_min: 0.01
+  alpha_scaling_type: 'standard_time'
 
   std_scale: True
   std_decay: .99 # original: .99
   std_min: 0.01
   std: 1 # original: 1
+  std_scaling_type: 'standard_time'
   
   buffer:
     size: 100000
