--- a/stored_results/test7/config.yml
+++ b/stored_results/test7/config.yml
@@ -15,11 +15,13 @@ agent:
   alpha_scale: False
   alpha_decay: .995
   alpha_min: 0.01
+  alpha_scaling_type: 'standard_time'
 
   std_scale: True
   std_decay: .997 # original: .99
   std_min: 0.01
   std: 1 # original: 1
+  std_scaling_type: 'standard_time'
   
   buffer:
     size: 100000
