--- a/stored_results/test11/config.yml
+++ b/stored_results/test11/config.yml
@@ -12,7 +12,7 @@ agent:
   tau: 0.005 #0.005
 
   alpha: .4
-  alpha_scale: False
+  alpha_scale: True
   alpha_decay: .994
   alpha_min: 0.01
   alpha_scaling_type: 'sigmoid_reward'
